// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ghReleaseChangelog depth-smaller 1`] = `
Array [
  Array [
    Object {
      "owner": "a",
      "ref": "tags",
      "repo": "b",
    },
  ],
  Array [
    Object {
      "accept": undefined,
      "body": "### Performance Improvements

*   只读模式下，也支持物料拖拽编辑 & 优化小组件拖拽展示 ([ae1939c](https://github.com/imcuttle/mometa/commit/ae1939cffa8115cb60e615029ad5b90eca4784e0))

**Full Changelog**: https://github.com/a/b/commits/0.0.23",
      "discussion_category_name": undefined,
      "draft": false,
      "generate_release_notes": undefined,
      "owner": "a",
      "prerelease": undefined,
      "repo": "b",
      "tag_name": "0.0.23",
      "target_commitish": undefined,
    },
  ],
]
`;

exports[`ghReleaseChangelog valid 1`] = `
Array [
  Array [
    Object {
      "owner": "imcuttle",
      "ref": "tags",
      "repo": "rcp",
    },
  ],
  Array [
    Object {
      "accept": undefined,
      "body": "## @rcp/abc

### Bug Fixes

*   title #123 should remove container firstly @imcuttle ([8dfcc84](https://github.com/imcuttle/rcp/commit/8dfcc84))

### Features

*   add c.preventfastop ([44bf84f](https://github.com/imcuttle/rcp/commit/44bf84f))

### Performance Improvements

*   set defaultLanguage to defaultProps ([cf01859](https://github.com/imcuttle/rcp/commit/cf01859))

### BREAKING CHANGES

*   use es6 instead of es5
*   remove global option

**Full Changelog**: https://github.com/imcuttle/rcp/commits/2.0.0",
      "discussion_category_name": undefined,
      "draft": false,
      "generate_release_notes": undefined,
      "owner": "imcuttle",
      "prerelease": undefined,
      "repo": "rcp",
      "tag_name": "2.0.0",
      "target_commitish": undefined,
    },
  ],
]
`;

exports[`ghReleaseChangelog valid-long v1.0.2 1`] = `
Array [
  Array [
    Object {
      "owner": "imcuttle",
      "ref": "tags",
      "repo": "gh-release-changelog",
    },
  ],
]
`;

exports[`ghReleaseChangelog valid-long v1.0.2-beta.3 1`] = `
Array [
  Array [
    Object {
      "owner": "imcuttle",
      "ref": "tags",
      "repo": "gh-release-changelog",
    },
  ],
  Array [
    Object {
      "accept": undefined,
      "body": "### Bug Fixes

*   some thing 1.0.2-beta.3 #1 @imcuttle ([a8bc65c](https://github.com/imcuttle/gh-release-changelog/commit/a8bc65c21d65e0b6a6c3f90bced3647363650112))

### BREAKING CHANGES

*   some changes...

**Full Changelog**: https://github.com/imcuttle/gh-release-changelog/commits/v1.0.2-beta.3",
      "discussion_category_name": undefined,
      "draft": false,
      "generate_release_notes": undefined,
      "owner": "imcuttle",
      "prerelease": undefined,
      "repo": "gh-release-changelog",
      "tag_name": "v1.0.2-beta.3",
      "target_commitish": undefined,
    },
  ],
]
`;

exports[`ghReleaseChangelogMonorepo bump-version 1`] = `
Array [
  Array [
    Object {
      "owner": "imcuttle",
      "ref": "tags",
      "repo": "b",
    },
  ],
  Array [
    Object {
      "accept": undefined,
      "body": "## b

### Performance Improvements

*   只读模式下，也支持物料拖拽编辑 & 优化小组件拖拽展示 ([ae1939c](https://github.com/imcuttle/mometa/commit/ae1939cffa8115cb60e615029ad5b90eca4784e0))

**Full Changelog**: https://github.com/imcuttle/b/commits/0.0.23",
      "discussion_category_name": undefined,
      "draft": undefined,
      "generate_release_notes": undefined,
      "owner": "a",
      "prerelease": undefined,
      "repo": "b",
      "tag_name": "0.0.23",
      "target_commitish": undefined,
    },
  ],
]
`;

exports[`ghReleaseChangelogMonorepo lerna 1`] = `
Array [
  Object {
    "accept": undefined,
    "body": "#### a

Haha, :smile:

#### b

Haha, :smile:

**Full Changelog**: https://github.com/o/a/commits/1.0.0",
    "discussion_category_name": undefined,
    "draft": undefined,
    "generate_release_notes": undefined,
    "owner": "o",
    "prerelease": undefined,
    "repo": "a",
    "tag_name": "1.0.0",
    "target_commitish": undefined,
  },
]
`;

exports[`ghReleaseChangelogMonorepo pnpm 1`] = `
Array [
  Array [
    Object {
      "owner": "o",
      "ref": "tags",
      "repo": "a",
    },
  ],
  Array [
    Object {
      "accept": undefined,
      "body": "#### a

Haha, :smile:

**Full Changelog**: https://github.com/o/a/compare/a@1.0.0-0...a@1.0.0",
      "discussion_category_name": undefined,
      "draft": undefined,
      "generate_release_notes": undefined,
      "owner": "o",
      "prerelease": undefined,
      "repo": "a",
      "tag_name": "a@1.0.0",
      "target_commitish": undefined,
    },
  ],
]
`;

exports[`ghReleaseChangelogMonorepo same-version-root-changelog 1`] = `
Array [
  Object {
    "accept": undefined,
    "body": "Haha, :smile:

**Full Changelog**: https://github.com/o/a/commits/1.0.0",
    "discussion_category_name": undefined,
    "draft": undefined,
    "generate_release_notes": undefined,
    "owner": "o",
    "prerelease": undefined,
    "repo": "a",
    "tag_name": "1.0.0",
    "target_commitish": undefined,
  },
]
`;

exports[`ghReleaseChangelogMonorepo workspaces 1`] = `
Array [
  Object {
    "accept": undefined,
    "body": "#### a

Haha, :smile:

#### b

Haha, :smile:

**Full Changelog**: https://github.com/o/a/commits/1.0.0",
    "discussion_category_name": undefined,
    "draft": undefined,
    "generate_release_notes": undefined,
    "owner": "o",
    "prerelease": undefined,
    "repo": "a",
    "tag_name": "1.0.0",
    "target_commitish": undefined,
  },
]
`;
